--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,25 @@
     <title>Bora Calcular!!!</title>
 </head>
 <body>
-    <h1>Olá!</h1>
+    <main class="container">
+        <div>
+            <h1>Cálculo de rendimento de gasolina</h1>
+        </div>
+        <div>
+            <p>Por favor, preencha as informações conforme solicitado nos campos a seguir</p>
+        </div>
+
+        <h3>Informe seu nome:</h3>
+        <input type="text">
+
+        <h3>Digite a quantidade de gasolina em litros:</h3>
+        <input type="number">
+
+        <h3>Km rodados pelo seu veículo:</h3>
+        <input type="number">
+
+        <h2>O rendimento total da sua gasolina foi de:</h2>
+        <p>-Resultado-</p>
+    </main>
 </body>
 </html>
