--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Bem vindo ao Calcula Certo</h1>
+    </header>
+
     <main class="container">
-        <div>
+        <div class="container-title">
             <h1>Cálculo de rendimento de gasolina</h1>
         </div>
-        <div>
+        <div class="container-info">
             <p>Por favor, preencha as informações conforme solicitado nos campos a seguir</p>
         </div>
 
-        <h3>Informe seu nome:</h3>
-        <input type="text">
+        <div class="box-name">
+            <h3>Informe seu nome:</h3>
+            <input type="text">
+        </div>
 
-        <h3>Digite a quantidade de gasolina em litros:</h3>
-        <input type="number">
+        <div class="box-gas-quantity">
+            <h3>Digite a quantidade de gasolina em litros:</h3>
+            <input type="number">
+        </div>
 
-        <h3>Km rodados pelo seu veículo:</h3>
-        <input type="number">
+        <div class="box-km">
+            <h3>Km rodados pelo seu veículo:</h3>
+            <input type="number">
+        </div>
 
-        <h2>O rendimento total da sua gasolina foi de:</h2>
-        <p>-Resultado-</p>
+        <div class="final-result">
+            <h2>O rendimento total da sua gasolina foi de:</h2>
+            <p>-Resultado-</p>
+        </div>
     </main>
 </body>
 </html>
