script src created for js file

--- a/src/index.html
+++ b/src/index.html
@@ -48,5 +48,6 @@
             <!-- 2. (Total de litros necessário) * Valor do combústivel (R$ / Litro) = Valor total gasto -->
         </div>
     </main>
+    <script src="math.js"></script>
 </body>
 </html>
