--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bora Calcular!!!</title>
+    <title>Bem-vindo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
 
         <div class="final-result">
             <h2>Valor a pagar (R$):</h2>
-            <p id="res"><input type="button" value="Calcular" onclick="calcular()"></input></p>
+            <p id="res"><input type="button" value="Calcular" onclick="calcular()"></input></p>                                 
         </div>
     </main>
     <script src="math.js"></script>
