refresh id from input to paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <div class="buttons">
             <div class="final-result">
                 <p id="res"><input type="button" value="Calcular" onclick="calcular()"></input></p>
-                <p><button id="refresh">Limpar dados</button></p>
+                <p id="refresh"><input type="button" value="Limpar dados"></input></p>
             </div>
         </div>
     </main>
